# hicard

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Makefile  main.js
frontend/src/: app.rs  components.rs  form.rs  lib.rs  main.rs
frontend/src/components/: play.rs  register.rs
game/: Cargo.toml
game/src/: lib.rs
