[package]
name = "hicard-backend"
version = "0.1.0"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
deckofcards = "0.4.0"
game = { path = "../game" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.2"
http = "0.2.0"
