[package]
authors = [
    "Triangle Rustaceans",
]
categories = ["gui", "wasm", "web-programming"]
description = "hicard-frontend provides an interface for playing high card."
edition = "2018"
keywords = ["yew", "wasm", "wasm-bindgen", "web"]
license = "MIT/Apache-2.0"
name = "hicard-frontend"
readme = "README.md"
repository = "https://github.com/yewstack/yew-wasm-pack-minimal"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.12"
game = { path = "../game" }
http = "0.2.0"
anyhow = "1.0.26"
uuid = { version = "0.8", features = ["wasm-bindgen"] }
serde_json = "1.0.48"
