[package]
name = "game"
version = "0.1.0"
authors = ["Eric Harding <eric.harding@bluetradesys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deckofcards = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1.0.48"
